# micrograd-rs

./: Cargo.toml  README.md
examples/binary_classifier/src/: main.rs
src/: lib.rs  moon.rs  neuron.rs  util.rs  value.rs
