[package]
name = "micrograd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
layout-rs = {version = "0.1.1", optional = true}

[dev-dependencies]
plotters = "0.3.5"

[features]
default = ["layout"]
layout = ["dep:layout-rs"]

[[example]]
name = "binary_classifier"
path = "examples/binary_classifier/src/main.rs"